# poetry-tshu-im

./: .gitignore  .pylintrc  .python-version  README.md  hoo-goa-chu-im.xlsx  m100.py  m300.py  mypy.ini  p01_import_source_data.py  p100_cha_ji_tian.py  p210_hoo_goa_chu_im_all.py  pyproject.toml  sys_arg.py  【河洛話注音】如夢令．昨夜雨疏風驟．李清照.xlsx  京口北固亭懷古.xlsx
Ji-Koo/: D02_漢語注音對照表.xlsx  nga_siok_thang_tai_lo.xlsx  彙集雅俗通十五音字典.xlsx
Piau-Im-Bun/: 《姜伯約歸降孔明，武鄉侯罵死王朗》.xlsx  【河洛話注音】原道．韓愈.xlsx  【河洛話注音】回鄉偶書．賀知章.xlsx  【河洛話注音】心經.xlsx  【河洛話注音】敕有司取士勿廢偏短令．曹操.xlsx  【河洛話注音】晁錯論．蘇軾.xlsx  【河洛話注音】永遇樂．京口北固亭懷古．辛棄疾.xlsx  【河洛話注音】證人得獎感言.xlsx
docs/: 【河洛話注音】如夢令．昨夜雨疏風驟．李清照.xlsx  【河洛話注音】江城子．乙卯正月二十日夜記夢．蘇軾.xlsx  鍵盤與注音符號對照表.xlsx  閩南語拼音轉換表.xlsx
examples/: RegEx.xlam  hoo-goa-chu-im-001.xlsx  my-pandas.ipynb  my-pscopg2.ipynb  p101.ipynb  quick_start_01.ipynb  search_by_regEX.ipynb  split_with_regEx.ipynb  xlwings_basic.ipynb
modules/: han_ji_chu_im.py
tests/: my_test.ipynb
tools/: PSQL_Table-han_ji_poj.csv  create_han_ji_khoo.sql  dictionary_tool.xlsx  get_han_ji_Query.sql  han_ji_khoo-import.sql  han_ji_khoo.sql  hoo-goa-chu-im.xlsx  nga_siok_thong_sip_ngoo_im.csv  nga_siok_thong_sip_ngoo_im_POJ.csv  nga_siok_thong_sip_ngoo_im_POJ.xlsx  nga_siok_thong_sip_ngoo_im_TL.xlsx  nga_siok_thong_sip_ngoo_im_v0.1.txt  nga_siok_thong_sip_ngoo_im_v0.1.xlsx  注音模版.xlsx  雅俗通字庫.xlsx
