[tool.poetry]
name = "poetry-tshu-im"
version = "0.1.0"
description = ""
authors = ["Alan Jui <alanjui.1960@gmail.com>"]
readme = "README.md"
packages = [{include = "poetry_tshu_im"}]

[tool.poetry.dependencies]
python = "^3.10"
xlwings = "^0.28.5"
openpyxl = "^3.0.10"
pandas = "^1.5.2"
psycopg2 = "^2.9.5"
pylint = "^2.15.7"

[tool.pyright]
# include = ["src"]
exclude = ["**/node_modules",
    "**/__pycache__",
    "src/experimental",
    "src/typestubs"
]
defineConstant = { DEBUG = true }
venvPath = "/Users/alanjui/.pyenv/versions"
venv = "my-tshu-im"

reportMissingImports = true
reportMissingTypeStubs = false

pythonVersion = "3.10"
pythonPlatform = "Darwin"

# executionEnvironments = [
#   { root = "src/web", pythonVersion = "3.5", pythonPlatform = "Windows", extraPaths = [ "src/service_libs" ] },
#   { root = "src/sdk", pythonVersion = "3.0", extraPaths = [ "src/backend" ] },
#   { root = "src/tests", extraPaths = ["src/tests/e2e", "src/sdk" ]},
#   { root = "src" }
# ]
# ignore = ["src/oldstuff"]
# stubPath = "src/stubs"

[virtualenvs]
in-project = false
path = "/Users/alanjui/.pyenv/versions/my-tshu-im/"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

# --------------------------------------------------------------- PYLINT
# Pylint code checker configuration.
# - Pylint docs:
#   https://pylint.readthedocs.io/en/latest/
# - Configuration reference:
#   http://pylint.pycqa.org/en/latest/technical_reference/features.html

[tool.pylint.MASTER]
# Python code to execute, usually for sys.path manipulation such as
# pygtk.require().
# init-hook="import sys; import os; from pylint.config import find_pylintrc; sys.path.append(os.path.dirname(find_pylintrc()))"
# Work in parallel.
# Parallel work disabled due to a bug in the pylint-django:
# https://github.com/PyCQA/pylint-django/issues/276
#jobs = "0"
jobs = "1"
# load-plugins = "pylint_django"

# Do not store results of previous runs.
persistent = "no"
# Allow to load C extension modules.
unsafe-load-any-extension = "yes"

[tool.pylint."MESSAGES CONTROL"]
enable = "c-extension-no-member"
disable = [
  "no-member",
  "unused-variable",
  "broad-except",
  "line-too-long",
  "consider-using-f-string",
  "missing-module-docstring",
  "missing-docstring"
]

# [tool.pylint.BASIC]
# # It is OK to have 2-letters identifiers, e.g. 'id' or 'ok'. Also allow
# # long identifiers, cause there is a strong line length limitation which
# # will force engineers to thing twice before giving too long names.
# argument-rgx = "[a-z_][a-z0-9_]{1,64}$"
# attr-rgx = "[a-z_][a-z0-9_]{1,64}$"
# bad-names = "foo,bar,baz,toto,tutu,tata,responce,pathes"
# class-attribute-rgx = "([A-Za-z_][A-Za-z0-9_]{1,64}|(__.*__))$"
# function-rgx = "[a-z_][a-z0-9_]{1,64}$"
# good-names = "i,j,k,ex,Run,_"
# method-rgx = "[a-z_][a-z0-9_]{1,64}$"
# # Docstrings are needed everywhere.
# no-docstring-rgx = "^$"
# variable-rgx = "[a-z_][a-z0-9_]{1,64}$"

[tool.pylint.FORMAT]
max-line-length="88"
max-module-lines="9000" # Right, over nine thousand!
# [tool.pylint.PYLINT_DJANGO]
# # NOTE: When Pytest runs Pylint this setting is overwritten by the
# # environment variable `DJANGO_SETTINGS_MODULE` set by `pytest-django`.
# # Anyway, the setting is still useful when VS Code runs Pylint directly.
# django-settings-module = "web_project.settings"

[tool.pylint.REFACTORING]
# We have line length 88, no need to check.
max-nested-blocks = "9000"

# [tool.pylint.REPORTS]
# reports = "no"
# score = "no"
