[tool.poetry]
name = "poetry-tshu-im"
version = "0.1.0"
description = ""
authors = ["Alan Jui <alanjui.1960@gmail.com>"]
readme = "README.md"
packages = [{include = "poetry_tshu_im"}]

[tool.poetry.dependencies]
python = "^3.10"
xlwings = "^0.28.5"
openpyxl = "^3.0.10"
pandas = "^1.5.2"
psycopg2 = "^2.9.5"


[tool.poetry.group.dev.dependencies]
pylint = "^2.15.7"
flake8 = "^6.0.0"
mypy = "^0.991"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
